--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div> -->
 
             <div class="predict-btn btn">Получить предсказание</div>
-            <a href='' class="back-btn btn">обратно на сайт</a>
+            <a href='' class="back-btn btn">Вернуться на сайт</a>
             
         </div>
     </body>
