--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./fonts/fonts.css" />
         
         <!-- <script src="jsshare.js"></script> -->
         <script async src="https://static.addtoany.com/menu/page.js"></script>
