--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <script async src="//cdn.jsdelivr.net/npm/share-buttons/dist/share-buttons.js"></script> -->
         <script src="index.js"></script>
-        <title>Document</title>
+        <title>Предсказания-2022 от Сети городских порталов</title>
     </head>
     <body>
         <div id="main">
