--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:image" content="./pictures/web_1.jpg" />
+        <meta property="og:image" content="https://ind-spirit.github.io/predictions-page/pictures/web_2.jpg" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="./fonts/fonts.css" />
         
