--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             property="og:image"
-            content="https://ind-spirit.github.io/predictions-page/pictures/mob_1.jpg"
+            content="https://ind-spirit.github.io/predictions-page/pictures/shate.jpg"
         />
         <meta
             property="vk:image"
-            content="https://ind-spirit.github.io/predictions-page/pictures/mob_1.jpg"
+            content="https://ind-spirit.github.io/predictions-page/pictures/share.jpg"
         />
-        <meta property="og:image:width" content="500" />
+        <meta property="og:image:width" content="850" />
         <meta property="og:image:height" content="500" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="./fonts/fonts.css" />
@@ -23,7 +23,10 @@
         <title>Предсказания-2022 от Сети городских порталов</title>
     </head>
     <body>
+        <img class='img-logo' src="./pictures/logo.png" alt="">
+        <img class='img-disclaimer' src="./pictures/disclaimer.png" alt="">
         <div id="main">
+            
             <div class="main__text">
                 Хочешь узнать, <br />
                 каким будет твой следующий год? <br />
@@ -53,6 +56,7 @@
 
             <div class="predict-btn btn">Получить предсказание</div>
             <a href="" class="back-btn btn">Вернуться на сайт</a>
+            
         </div>
     </body>
 </html>
