--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
             property="og:image"
             content="https://ind-spirit.github.io/predictions-page/pictures/share.jpg"
         />
-        <meta
+        <!-- <meta
             property="vk:image"
             content="https://ind-spirit.github.io/predictions-page/pictures/share.jpg"
-        />
+        /> -->
         <meta property="og:image:width" content="850" />
         <meta property="og:image:height" content="500" />
         <link rel="stylesheet" href="style.css" />
